parser/tests/cases/snapshots/cases__parse_ast__empty_contract_def.snap
---
source: parser/tests/cases/parse_ast.rs
expression: "ast_string(stringify!(empty_contract_def), contracts::parse_contract_def,\n           r#\"contract Foo:\n    pass\n\"#)"

---
Node(
  kind: ContractDef(
    name: Node(
      kind: "Foo",
      span: Span(
        start: 9,
        end: 12,
      ),
    ),
    fields: [],
    body: [],
  ),
  span: Span(
    start: 0,
    end: 12,
  ),
)
