parser/tests/cases/snapshots/cases__parse_ast__event_def.snap
---
source: parser/tests/cases/parse_ast.rs
expression: "ast_string(stringify!(event_def), types::parse_event_def,\n           \"event Foo:\\n  x: address\\n  idx y: u8\")"

---
Node(
  kind: EventDef(
    name: Node(
      kind: "Foo",
      span: Span(
        start: 6,
        end: 9,
      ),
    ),
    fields: [
      Node(
        kind: EventField(
          idx_qual: None,
          name: Node(
            kind: "x",
            span: Span(
              start: 13,
              end: 14,
            ),
          ),
          typ: Node(
            kind: Base(
              base: "address",
            ),
            span: Span(
              start: 16,
              end: 23,
            ),
          ),
        ),
        span: Span(
          start: 13,
          end: 23,
        ),
      ),
      Node(
        kind: EventField(
          idx_qual: Some(Node(
            kind: IdxQualifier(),
            span: Span(
              start: 26,
              end: 29,
            ),
          )),
          name: Node(
            kind: "y",
            span: Span(
              start: 30,
              end: 31,
            ),
          ),
          typ: Node(
            kind: Base(
              base: "u8",
            ),
            span: Span(
              start: 33,
              end: 35,
            ),
          ),
        ),
        span: Span(
          start: 26,
          end: 35,
        ),
      ),
    ],
  ),
  span: Span(
    start: 0,
    end: 35,
  ),
)
