parser/tests/cases/snapshots/cases__parse_ast__expr_attr1.snap
---
source: parser/tests/cases/parse_ast.rs
expression: "ast_string(stringify!(expr_attr1), expressions::parse_expr, \"foo.bar[0][y]\")"

---
Node(
  kind: Subscript(
    value: Node(
      kind: Subscript(
        value: Node(
          kind: Attribute(
            value: Node(
              kind: Name("foo"),
              span: Span(
                start: 0,
                end: 3,
              ),
            ),
            attr: Node(
              kind: "bar",
              span: Span(
                start: 4,
                end: 7,
              ),
            ),
          ),
          span: Span(
            start: 0,
            end: 7,
          ),
        ),
        slices: Node(
          kind: [
            Node(
              kind: Index(Node(
                kind: Num("0"),
                span: Span(
                  start: 8,
                  end: 9,
                ),
              )),
              span: Span(
                start: 8,
                end: 9,
              ),
            ),
          ],
          span: Span(
            start: 7,
            end: 10,
          ),
        ),
      ),
      span: Span(
        start: 0,
        end: 10,
      ),
    ),
    slices: Node(
      kind: [
        Node(
          kind: Index(Node(
            kind: Name("y"),
            span: Span(
              start: 11,
              end: 12,
            ),
          )),
          span: Span(
            start: 11,
            end: 12,
          ),
        ),
      ],
      span: Span(
        start: 10,
        end: 13,
      ),
    ),
  ),
  span: Span(
    start: 0,
    end: 13,
  ),
)
