parser/tests/cases/snapshots/cases__parse_ast__expr_call1.snap
---
source: parser/tests/cases/parse_ast.rs
expression: "ast_string(stringify!(expr_call1), expressions::parse_expr, \"foo()\")"

---
Node(
  kind: Call(
    func: Node(
      kind: Name("foo"),
      span: Span(
        start: 0,
        end: 3,
      ),
    ),
    generic_args: [],
    args: Node(
      kind: [],
      span: Span(
        start: 3,
        end: 5,
      ),
    ),
  ),
  span: Span(
    start: 0,
    end: 5,
  ),
)
